# zeroclaw

./: .gitignore  Cargo.toml
crates/tacnode_rs/: .gitignore  Cargo.toml
crates/tacnode_rs/src/: auth.rs  datasync.rs  go_utils.rs  grafana.rs  lib.rs  test_utils.rs
crates/tacnode_rs/src/guc/: mod.rs  pg_utils.rs
src/: main.rs
src/agent/: loop_.rs
src/providers/: ollama.rs
src/tools/: aria2rpc_tool.rs  datasync_tool.rs  mod.rs
src/tools/tacnode/: datasync_tool.rs  guc_tool.rs  mod.rs
tiny_eval/: datasync_test0.sh  tacnode_guc_test0.sh
